navbar color and footer change

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,5 @@
 
-
-
-<h3 class="sectionHeadings">My Training Philosophy</h3>
+<h3>My Training Philosophy</h3>
  
 <p class="pContent">Regardless of the training goal - the program and training should be a process that 
       can be enjoyed and provide the preparation needed to enjoy the event. Positive memorable 
@@ -12,9 +10,9 @@
       The intent is to provide an educational, as well as, a training experience.
   </p>
   
-  <h3 class="sectionHeadings">Why Choose Next Level Distance Running</h3>
+  <h3>Why Choose Next Level Distance Running</h3>
 
-  <ul class="homeList">
+  <ul>
       <li>Many years of individual training</li>
       <li>Successful training experience for runners of all ages, abilities, and goals</li>
       <li>Successfully trained individuals through direct contact meetings and online training processes</li>
@@ -25,11 +23,11 @@
 	  
 	  
 
-<h3 class="sectionHeadings">Packages Offered</h3>
-<ul class="homeList">
+<h3>Packages Offered</h3>
+<ul>
 	<li>Face to Face</li>
 	<li>Online Training Package</li>
 </ul>
 	
 
-<p class="pContent">4 + Months of training guidance and information and more of a summary is needed.</p>
+<p>4 + Months of training guidance and information and more of a summary is needed.</p>
