--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,4 +1,20 @@
+
 @import "bootstrap";
+
+//navbar
+$navbar-inverse-bg: #7F00FF;
+$navbar-inverse-border: #7F00FF;
+$navbar-fixed-top:  #7F00FF;
+
+// Inverse navbar
+.navbar-inverse .container-fluid {
+background-color: $navbar-inverse-bg;
+border-color: $navbar-inverse-border;
+}
+
+
+
+
 
 body {
 	padding-top: 70px;
@@ -8,4 +24,48 @@ body {
 
 html {
 	background-color: #cdd0d7;
+}
+
+//Header Style
+
+.navbar .nav > li > a {
+	color: white;
+}
+
+#logo {
+  float: left;
+  margin-right: 10px;
+  font-size: 1.7em;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  padding-top: 9px;
+  font-weight: bold;
+  line-height: 1;
+  &:hover {
+    color: #fff;
+    text-decoration: none;
+  }
+}
+
+// Footer
+footer {
+  margin-top: 45px;
+  padding-top: 5px;
+  border-top: 1px solid #eaeaea;
+  background-color: #7F00FF;
+  a {
+    color: #555;
+    &:hover {
+      color: #7F00FF;
+    }
+  }
+  ul {
+    float: right;
+    list-style: none;
+    li {
+      float: left;
+      margin-left: 10px;
+    }
+  }
 }
