--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="footer">
   <nav>
-    <ul id="footerList">
+    <ul class="nav nav-pills">
       <li><%= link_to "Home",    root_path %></li>
       <li><%= link_to "Videos",    videos_path %></li>
       <li><%= link_to "About the Trainer",    bio_path %></li>
