--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,10 +1,10 @@
-<footer class="footer">
+<footer>
   <nav>
     <ul class="nav nav-pills">
-      <li><%= link_to "Home",    root_path %></li>
-      <li><%= link_to "Videos",    videos_path %></li>
-      <li><%= link_to "About the Trainer",    bio_path %></li>
-      <li><%= link_to "Contact",    contact_path %></li> 
+      <li class="active"><%= link_to "Home",    root_path %></li>
+      <li class="active"><%= link_to "Videos",    videos_path %></li>
+      <li class="active"><%= link_to "About the Trainer",    bio_path %></li>
+      <li class="active"><%= link_to "Contact",    contact_path %></li> 
     </ul>
   </nav>
 </footer>
