changed the about routes and changed videos page to training plans page and added the corresponding routes

--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,3 +1,7 @@
 <% provide(:title, 'Contact') %>
-<h1>StaticPages#Contact</h1>
-<p>Find me in app/views/static_pages/Contact.html.erb</p>
+<h3 class="sectionHeadings">Contact the Trainer</h3>
+
+<p class="pContent">If you have any questions for the Trainer, please email the Trainer at:
+	<a href="mailto:rdcarda@facstaff.wisc.edu?Subject=Web%20Site%20Email" 
+    	target="top">Email the Trainer</a>
+</p>
