--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,8 +5,8 @@
       <nav>
         <ul class="nav pull-right">
           <li><%= link_to "Home",    root_path %></li>
-          <li><%= link_to "Videos",    videos_path %></li>
-          <li><%= link_to "About the Trainer",    bio_path %></li>
+          <li><%= link_to "Training Plans",    training_plans_path %></li>
+          <li><%= link_to "About the Trainer",    about_path %></li>
           <li><%= link_to "Contact",    contact_path %></li>
         </ul>
       </nav>
