--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,26 +8,37 @@
       health and a high quality of life. The goal of the training should also be to learn 
       about the training process, so there is a better understanding of the program design. 
       The intent is to provide an educational, as well as, a training experience.
-  </p>
+</p>
   
-  <h3>Why Choose Next Level Distance Running</h3>
+<h3>Why Choose Next Level Distance Running</h3>
 
-  <ul>
+<ul>
       <li>Many years of individual training</li>
       <li>Successful training experience for runners of all ages, abilities, and goals</li>
       <li>Successfully trained individuals through direct contact meetings and online training processes</li>
       <li>Personalized training programs designed to meet your individual needs</li>
       <li>Educational information provided allows for a greater understanding of why you are 
-  	   doing what you are doing in your training</li>
-  </ul>
-	  
-	  
-
+  	     doing what you are doing in your training</li>
+</ul>
+	
 <h3>Packages Offered</h3>
 <ul>
 	<li>Face to Face</li>
-	<li>Online Training Package</li>
+	<ul>
+    		<li>Best way to get help from a Trainer and work with others to help you stay on your 
+		      training plan.  This option offers everything that the Online Training Package offers, 
+		      and gets you time with the trainer during your weekly meet ups, and your weekly 
+		      communication online.  <a href="http://www.cardatraining.herokuapp.com">Click here </a>
+		      to get all of the details of this package and the pricing.</li>        
+  	</ul>
+	  
+    	<li>Online Training Package</li>
+      		<ul>
+        		<li>Great Package for those who want to get to the next step on their own.  This 
+			      package offers great videos and power points that help you learn about preparing 
+			      yourself for any event.  You will communicate with the trainer weekly to help get 
+			      a plan and adjust it as needed.  <a href="http://www.cardatraining.herokuapp.com">Click here </a>
+			      to get all of the details of this package and the pricing.
+		       </li>
+       	</ul>
 </ul>
-	
-
-<p>4 + Months of training guidance and information and more of a summary is needed.</p>
