--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,44 +1,72 @@
+<div class="container-fluid">
+	<div class="center hero-unit">
+		<h1>Next Level Distance Running</h1>
+	</div>
+</div>
 
-<h3>My Training Philosophy</h3>
- 
-<p class="pContent">Regardless of the training goal - the program and training should be a process that 
-      can be enjoyed and provide the preparation needed to enjoy the event. Positive memorable 
-      experiences keep people participating and my goal is that individuals will continue 
-      with a running training program, even if for no other reason than to maintain good 
-      health and a high quality of life. The goal of the training should also be to learn 
-      about the training process, so there is a better understanding of the program design. 
-      The intent is to provide an educational, as well as, a training experience.
-</p>
-  
-<h3>Why Choose Next Level Distance Running</h3>
 
-<ul>
-      <li>Many years of individual training</li>
-      <li>Successful training experience for runners of all ages, abilities, and goals</li>
-      <li>Successfully trained individuals through direct contact meetings and online training processes</li>
-      <li>Personalized training programs designed to meet your individual needs</li>
-      <li>Educational information provided allows for a greater understanding of why you are 
-  	     doing what you are doing in your training</li>
-</ul>
+
+<div class="container-fluid">
+	<div class="row-fluid">
+		<div class="span6">
+			<h3 class="text-center">My Training Philosophy</h3>
+
+			<p>As your trainer, my goal is to assist you in accomplishing your goals as a long distance runner.  
+				If for no other reason than the aforementioned,  than I wish to provide you with the habits to 
+				maintain good health and a high quality of life.
+			</p>
+
+			<p>The key to achieving your goals as a long distance runner is to focus on the training process.  
+				An individual's training program should be a process that can be enjoyed and also provide
+       			the preparation needed to complete a targeted event.  I will provide you with an educational 
+				and positive training experience that will keep you participating.
+			</p>
+		</div>
+
 	
-<h3>Packages Offered</h3>
-<ul>
-	<li>Face to Face</li>
-	<ul>
-    		<li>Best way to get help from a Trainer and work with others to help you stay on your 
-		      training plan.  This option offers everything that the Online Training Package offers, 
-		      and gets you time with the trainer during your weekly meet ups, and your weekly 
-		      communication online.  <a href="http://www.cardatraining.herokuapp.com">Click here </a>
-		      to get all of the details of this package and the pricing.</li>        
-  	</ul>
-	  
-    	<li>Online Training Package</li>
+		<div class="span6">
+			<h3 class="text-center">The Right Choice</h3>
+
+			<ul>
+      				<li>Many years of individual training</li>
+      	  			<li>Successful training experience for runners of all ages, abilities, and goals</li>
+      	  			<li>Successfully trained individuals through direct contact meetings and online training processes</li>
+      	  			<li>Personalized training programs designed to meet your individual needs</li>
+      	  			<li>Educational information provided allows for a greater understanding of why you are 
+  	     	      	     	      doing what you are doing in your training</li>
+			</ul>
+		</div>
+	</div>
+</div>
+
+
+<div class="container-fluid">
+	<h3>Packages Offered</h3>
+		<ul>
+			<li>Online Training Program</li>
+		<ul>
+			<li>The Online Training Package is an excellent choice for runners seeking to reach 
+				the next level on their own.  This package offers great videos and power points 
+				that help you learn about preparing yourself for any event.  You will 
+				communicate with the trainer weekly to coordinate a plan and adjust it as 
+				needed.  <strong><%= link_to "  Click here",    training_plans_path %></strong>
+			       to get all of the details of this package and the pricing.
+			 </li>
+				  			  
+  		</ul>
+	       <br />
+    			<li>Face to Face Training Program</li>
       		<ul>
-        		<li>Great Package for those who want to get to the next step on their own.  This 
-			      package offers great videos and power points that help you learn about preparing 
-			      yourself for any event.  You will communicate with the trainer weekly to help get 
-			      a plan and adjust it as needed.  <a href="http://www.cardatraining.herokuapp.com">Click here </a>
-			      to get all of the details of this package and the pricing.
-		       </li>
+			<li>This is the best training package to optimize your effort with your trainer and to stay on
+				course with your training plan.  In addition to all of the benefits of the Online
+				Training Package, the Face to Face Training Package also includes one on one 
+				time with the trainer during your weekly meeting, and your weekly 
+				communication session online.
+				<strong><%= link_to "  Click here",    training_plans_path %></strong>
+		      	  	for more information regarding the Face to Face Training Package.
+			</li>
        	</ul>
-</ul>
+		</ul>
+</div>
+
+
