contact page complete

--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,7 +1,13 @@
 <% provide(:title, 'Contact') %>
-<h3 class="sectionHeadings">Contact the Trainer</h3>
+<div class="container-fluid">
+	<div class="center hero-unit">
+		<h1>Next Level Distance Running</h1>
+		<h2>Contact</h2>
+		<br />
+		<h3>If you have any questions or concerns please email Ronnie Carda at:
+			<%= mail_to('rdcarda@facstaff.wisc.edu') %>
+		</h3>
+	</div>
+</div>
 
-<p class="pContent">If you have any questions for the Trainer, please email the Trainer at:
-	<a href="mailto:rdcarda@facstaff.wisc.edu?Subject=Web%20Site%20Email" 
-    	target="top">Email the Trainer</a>
-</p>
+
