--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -43,7 +43,7 @@
 <div class="container-fluid">
 	<h3>Packages Offered</h3>
 		<ul>
-			<li>Online Training Program</li>
+			<li class="label label-success">Online Training Program</li>
 		<ul>
 			<li>The Online Training Package is an excellent choice for runners seeking to reach 
 				the next level on their own.  This package offers great videos and power points 
@@ -55,7 +55,7 @@
 				  			  
   		</ul>
 	       <br />
-    			<li>Face to Face Training Program</li>
+    			<li class="label label-success">Face to Face Training Program</li>
       		<ul>
 			<li>This is the best training package to optimize your effort with your trainer and to stay on
 				course with your training plan.  In addition to all of the benefits of the Online
