--- a/app/views/static_pages/training_plans.html.erb
+++ b/app/views/static_pages/training_plans.html.erb
@@ -1,4 +1,12 @@
 <% provide(:title, 'Training Plans') %>
+<div class="container-fluid">
+	<div class="center hero-unit">
+		<h1>Next Level Distance Running</h1>
+		<h2>Training Plans</h2>
+	</div>
+</div>
+
+
 <h3>Training Plans</h3>
 <ul>
 	<li>Face to Face</li>
