--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,23 +1,48 @@
 <% provide(:title, 'About the Trainer') %>
-<h3>About the Trainer</h3>
 
-<ul>
-	<li>PH.D. in Exercise Physiology</li>
-	<li>NSCA Certified Strength and Conditioning Specialist</li>
-	<li>Lifelong runner</li>
-	<li>Previously was a successful high school track and cross-country coach</li>
-	<li>Coach for a college running club </li>
-	<li>Have ran 40+ marathons</li>
-	<li>Have done one on one and group distance training with many individuals</li>
-	<li>Taught a university marathon training class for 18 years</li>
-	<li>Online marathon class through university alumni association 10+ years</li>
-	<li>Coached Leukemia Team In Training Half and full marathoners - both walkers 
-		and runners, for 8 years</li>   			
-</ul>
+<div class="container-fluid">
+	<div class="center hero-unit">
+		<h1>Next Level Distance Running</h1>
+		<h2>Trainer Biography</h2>
+	</div>
+</div>
 
-<p>Have been successful working with a individuals with a wide range of abilities and experience 
-       levels -  from individuals with very limited recreational running experience wishing to challenge
-       themselves to complete a 1/2 or full marathon to performance oriented individuals looking to 
-       best their personal running times.  I have trained two individuals (one man, one woman) who 
-	ran their first marathon, with my guidance, and went on to qualify for the U.S. Olympic Trials 
-</p>
+<div class="container-fluid">
+	<div class="row-fluid">
+		<div class="span6">
+			<h3 class="text-center">About the Trainer</h3>
+
+    		  	<p>Ronnie Carda has been devoted to helping others achieve their fitness goals for 
+				over 18 years.  He has enjoyed success working with individuals possessing a 
+				wide range of abilities.  Whether you have limited recreational running 
+				experience wishing to complete a half or full marathon or you are a seasoned 
+				runner in search of besting your personal running times - Ronnie's knowledge and 
+				experience will prove to be invaluable.   
+    		   	</p>
+				
+			<p>Among many other accomplishments in his life, Ronnie is very proud to have trained 
+				two individuals (one man, one woman) to run in their first marathons.  With his guidance
+				they went on to qualify for the U.S. Olympic Trials.
+		</div>
+
+	
+		<div class="span6">
+			<h3 class="text-center">Credentials and Accolades</h3>
+
+			<ul>
+				<li>PH.D. in Exercise Physiology</li>
+				<li>NSCA Certified Strength and Conditioning Specialist</li>
+				<li>Successful high school track and cross-country coach</li>
+				<li>Coach for a college running club </li>
+				<li>Participated in 40+ marathons</li>
+				<li>Experience training one-on-one and group distance training with many individuals</li>
+				<li>18 Years experience instructing university marathon training class</li>
+				<li>10+ years online marathon class through university alumni association</li>
+				<li>Coached Leukemia Team In Training half and full marathoners - both walkers 
+					and runners, for 8 years</li>
+				<li>Lifelong runner</li>
+				
+			</ul>
+		</div>
+	</div>
+</div>
