--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -49,7 +49,7 @@
 				the next level on their own.  This package offers great videos and power points 
 				that help you learn about preparing yourself for any event.  You will 
 				communicate with the trainer weekly to coordinate a plan and adjust it as 
-				needed.  <strong><%= link_to "  Click here",    training_plans_path %></strong>
+				needed.  <strong><%= link_to "  Click here",    training_programs_path %></strong>
 			       to get all of the details of this package and the pricing.
 			 </li>
 				  			  
@@ -62,7 +62,7 @@
 				Training Package, the Face to Face Training Package also includes one on one 
 				time with the trainer during your weekly meeting, and your weekly 
 				communication session online.
-				<strong><%= link_to "  Click here",    training_plans_path %></strong>
+				<strong><%= link_to "  Click here",    training_programs_path %></strong>
 		      	  	for more information regarding the Face to Face Training Package.
 			</li>
        	</ul>
