--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,7 @@
   <nav>
     <ul class="nav nav-pills ">
       <li class="active"><%= link_to "Home",    root_path %></li>
-      <li class="active"><%= link_to "Training Plans",    training_plans_path %></li>
+      <li class="active"><%= link_to "Training Programs",    training_programs_path %></li>
       <li class="active"><%= link_to "About the Trainer",    about_path %></li>
       <li class="active"><%= link_to "Contact",    contact_path %></li> 
     </ul>
