--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,10 +1,12 @@
 <footer>
   <nav>
-    <ul class="nav nav-pills ">
+    <div class="text-center">
+    <ul class="nav nav-pills center-pills">
       <li class="active"><%= link_to "Home",    root_path %></li>
       <li class="active"><%= link_to "Training Programs",    training_programs_path %></li>
       <li class="active"><%= link_to "About the Trainer",    about_path %></li>
-      <li class="active"><%= link_to "Contact",    contact_path %></li> 
+      <li class="active"><%= link_to "Contact",    contact_path %></li>
+    </div> 
     </ul>
   </nav>
 </footer>
