--- a/app/views/static_pages/training_programs.html.erb
+++ b/app/views/static_pages/training_programs.html.erb
@@ -62,6 +62,7 @@
 			<li>Group distance runs</li>
 			<li>Tempo Runs</li>
 			<li>Hill workouts</li>
+			<li>Interval Workouts</li>
 		</ul>
 	</p>
 </div>
