--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -19,7 +19,7 @@ border-color: $navbar-inverse-border;
 
 body {
 	padding-top: 70px;
-	width: 80%;
+	width: 100%;
 	margin: auto;
 }
 
@@ -92,6 +92,7 @@ footer {
     color: #7F00FF;
     }
   }
+  
   ul {
     list-style: none;
     padding-top: 10px;
@@ -102,6 +103,7 @@ footer {
 .nav-pills {
 	display: inline-block;	
 }
+
 .nav-pills .active > a { 
 
 	color: black;
@@ -114,6 +116,7 @@ footer {
 	background-color: #7F00FF;	
 }
 
-.center-pills li {
+.center-pills > li {
 	padding-left: 20px;
+	
 }
