image icons added to footer

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -101,7 +101,17 @@ footer {
 
 //  Footer Nav Links
 .nav-pills {
-	display: inline-block;	
+	display: inline-block;
+	margin-top: 10px;	
+}
+
+#paypal {
+	float: left;
+	margin-top: -7.5px;
+}
+
+#facebook {
+	float: right;
 }
 
 .nav-pills .active > a { 
