--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,12 +1,14 @@
 <footer>
-  <nav>
-    <div class="text-center">
-    <ul class="nav nav-pills center-pills">
-      <li class="active"><%= link_to "Home",    root_path %></li>
-      <li class="active"><%= link_to "Training Programs",    training_programs_path %></li>
-      <li class="active"><%= link_to "About the Trainer",    about_path %></li>
-      <li class="active"><%= link_to "Contact",    contact_path %></li>
-    </div> 
-    </ul>
-  </nav>
+	<nav>
+    		<div class="text-center">
+			<%= link_to(image_tag("paypal.png"), "https://www.paypal.com/", :id => "paypal", :title =>"PayPal") %>
+			<%= link_to(image_tag("facebook_icon.png"), "https://www.facebook.com/", :id => "facebook", :title =>"Facebook") %>
+    			<ul class="nav nav-pills center-pills">
+      				<li class="active"><%= link_to "Home",    root_path %></li>
+      			  	<li class="active"><%= link_to "Training Programs",    training_programs_path %></li>
+      			  	<li class="active"><%= link_to "About the Trainer",    about_path %></li>
+      			  	<li class="active"><%= link_to "Contact",    contact_path %></li> 
+			</ul>
+		</div>
+  	</nav>
 </footer>
