saved for calendar gem

--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -7,7 +7,11 @@
 		<h3>If you have any questions or concerns please email Ronnie Carda at:
 			<%= mail_to('rdcarda@facstaff.wisc.edu') %>
 		</h3>
-		
+		<ul data-ui="calendar">
+		  <li><b data-is="date">Today</b> The day you discovered bootstrap-calendar</li>
+		  <li><b data-is="date">Tomorrow</b> The day you finished your project</li>
+		  <li><b data-is="date">Next Friday</b> Celebrate victory</li>
+		</ul>
 	</div>
 </div>
 
