addition of title art

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,10 +1,7 @@
 <% provide(:title, 'About the Trainer') %>
 
 <div class="container-fluid">
-	<div class="center hero-unit">
-		<h1>Next Level Distance Running</h1>
-		<h2>Trainer Biography</h2>
-	</div>
+	<%= render 'layouts/titleArt' %>
 </div>
 
 <div class="container-fluid">
