--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,18 +1,11 @@
 <% provide(:title, 'Contact') %>
-<div class="container-fluid">
-	<div class="center hero-unit">
-		<h1>Next Level Distance Running</h1>
-		<h2>Contact</h2>
-		<br />
-		<h3>If you have any questions or concerns please email Ronnie Carda at:
-			<%= mail_to('rdcarda@facstaff.wisc.edu') %>
-		</h3>
-		<ul data-ui="calendar">
-		  <li><b data-is="date">Today</b> The day you discovered bootstrap-calendar</li>
-		  <li><b data-is="date">Tomorrow</b> The day you finished your project</li>
-		  <li><b data-is="date">Next Friday</b> Celebrate victory</li>
-		</ul>
-	</div>
+<div class="container-fluid">	
+	<%= render 'layouts/titleArt' %>
+	<h2>Contact</h2>
+	<br />
+	<h3>If you have any questions or concerns please email Ronnie Carda at:
+		<%= mail_to('rdcarda@facstaff.wisc.edu') %>
+	</h3>	
 </div>
 
 
