--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,10 +1,6 @@
 <div class="container-fluid">
-	<div class="center hero-unit">
-		<h1>Next Level Distance Running</h1>
-	</div>
+	<%= render 'layouts/titleArt' %>
 </div>
-
-
 
 <div class="container-fluid">
 	<div class="row-fluid">
