--- a/app/views/static_pages/training_programs.html.erb
+++ b/app/views/static_pages/training_programs.html.erb
@@ -1,10 +1,6 @@
 <% provide(:title, 'Training Plans') %>
 <div class="container-fluid">
-	<div class="center hero-unit">
-		<h1>Next Level Distance Running</h1>
-		<h2>Training Programs</h2>
-		<h3 id="season">Training season = June until mid-October
-	</div>
+	<%= render 'layouts/titleArt' %>
 </div>
 
 
