--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,7 +8,7 @@
 			<h3 class="text-center">My Training Philosophy</h3>
 
 			<p>As your trainer, my goal is to assist you in accomplishing your goals as a long distance runner.  
-				If for no other reason than the aforementioned,  than I wish to provide you with the habits to 
+				I wish to provide you with the habits to 
 				maintain good health and a high quality of life.
 			</p>
 
