--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -24,7 +24,7 @@
 			<h3 class="text-center">The Right Choice</h3>
 
 			<ul>
-      				<li>Many years of individual training</li>
+      				<li>Training individuals for running events for many years</li>
       	  			<li>Successful training experience for runners of all ages, abilities, and goals</li>
       	  			<li>Successfully trained individuals through direct contact meetings and online training processes</li>
       	  			<li>Personalized training programs designed to meet your individual needs</li>
