title art change

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -38,6 +38,8 @@
 				<li>Coached Leukemia Team In Training half and full marathoners - both walkers 
 					and runners, for 8 years</li>
 				<li>Lifelong runner</li>
+				<li>Ronnie Carda has run in over 50 marathons and half 
+					marathons, and he still actively trains to participate in these events.</li>  
 				
 			</ul>
 		</div>
