content changes to website

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -5,6 +5,7 @@
 </div>
 
 <div class="container-fluid">
+	<%= render 'layouts/addressDiv' %>
 	<div class="row-fluid">
 		<div class="span6">
 			<h3 class="text-center">About the Trainer</h3>
@@ -17,17 +18,30 @@
 				experience will prove to be invaluable.   
     		   	</p>
 				
-			<p>Among many other accomplishments in his life, Ronnie is very proud to have trained 
-				two individuals (one man, one woman) to run in their first marathons.  With his guidance
-				they went on to qualify for the U.S. Olympic Trials.
+			<p>Ronnie is very proud to have trained two individuals (one man, one woman) to 
+				run in their first marathons.  With his guidance they went on to qualify for the 
+				U.S. Olympic Trials.
+			</p>
 		</div>
 
 	
 		<div class="span6">
 			<h3 class="text-center">Credentials and Accolades</h3>
-
 			<ul>
-				<li>PH.D. in Exercise Physiology</li>
+				<li>1990 - Ph D, Biodynamics, General</ br>
+					University of Wisconsin - Madison</ br>
+					Madison, Wisconsin
+				</li>
+			
+				<li>1983 - MS, Physical Education - Teacher Education</ br>
+					South Dakota State University</ br>
+					Brookings, South Dakota
+				</li>
+				
+				<li>1979 - BS, Physical Education/History, Athletic Coaching, Summa cum laude</ br>
+					Black Hills State University</ br>
+					Spearfish, South Dakota
+				</li>
 				<li>NSCA Certified Strength and Conditioning Specialist</li>
 				<li>Successful high school track and cross-country coach</li>
 				<li>Coach for a college running club </li>
@@ -38,8 +52,9 @@
 				<li>Coached Leukemia Team In Training half and full marathoners - both walkers 
 					and runners, for 8 years</li>
 				<li>Lifelong runner</li>
-				<li>Ronnie Carda has run in over 50 marathons and half 
-					marathons, and he still actively trains to participate in these events.</li>  
+				<li>Ronnie Carda has run in over 50 marathons and half marathons, and he  
+					still actively trains to participate in these events.
+				</li>  
 				
 			</ul>
 		</div>
