--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -22,11 +22,17 @@ body {
 	width: 80%;
 	margin: auto;
 	margin-bottom: 50px;
+	
 }
 
 .center {
 	text-align: center;
 	//background-color: #66CCCC; 
+	border: solid;
+}
+
+.opening {
+	font-size: 12pt;
 }
 
 .price {
@@ -43,12 +49,20 @@ label {
 	padding: 5px 5px 5px 5px;
 }
 
-#season {
-	color: green;
+#address {
+	border-top: solid;
+	border-bottom: solid;
+	text-align: center;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	border-width: 1px;
 }
-
-
 /*Home Page styling*/
+
+#homeCaption {
+	font-size: 8pt;
+	text-align: center;
+}
 
 .span6 {
 	margin-bottom: 20px;
@@ -61,10 +75,9 @@ label {
 
 #logo {
   float: left;
-  margin-right: 10px;
   font-family: capitals;
   font-size: 1.7em;
-  font-style: italic;
+ // font-style: italic;
   color: #fff;
   text-transform: uppercase;
   letter-spacing: -1px;
