--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -9,6 +9,7 @@
       			  	<li class="active"><%= link_to "About the Trainer",    about_path %></li>
       			  	<li class="active"><%= link_to "Contact",    contact_path %></li> 
 			</ul>
+			<p>Located in Madison, Wisconsin</p>
 		</div>
   	</nav>
 </footer>
