--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,11 +1,17 @@
 <% provide(:title, 'Contact') %>
 <div class="container-fluid">	
 	<%= render 'layouts/titleArt' %>
-	<h2>Contact</h2>
+</div>
+
+<div class="container-fluid">
+	<%= render 'layouts/addressDiv' %>
 	<br />
 	<h3>If you have any questions or concerns please email Ronnie Carda at:
 		<%= mail_to('rdcarda@facstaff.wisc.edu') %>
-	</h3>	
+	</h3>
 </div>
 
 
+
+
+		
