--- a/app/views/static_pages/training_programs.html.erb
+++ b/app/views/static_pages/training_programs.html.erb
@@ -5,6 +5,7 @@
 
 
 <div class="container-fluid">
+	<%= render 'layouts/addressDiv' %>
 	<div class="row-fluid">
 		<div class="span6">
 			<h3 class="text-center">Online Training Program</h3>
@@ -61,5 +62,9 @@
 			<li>Interval Workouts</li>
 		</ul>
 	</p>
+</div>
+
+<div class="container-fluid">
+	<h4>Payments Accepted:  Paypal, check or money order</h4>
 </div>
     
