--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -91,13 +91,9 @@ label {
   }
 }
 
-#titlePic1 {
-	float: right;
-	
-}
-
 #titleText {
-	width: 75%;
+	width: 100%;
+	margin: auto;
 }
 
 // Footer
