--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -12,14 +12,9 @@
 		<h3> Next Level Distance Running can help you achieve these goals!</h3>
 	</div>
 	<div class="row-fluid">
-		<div class="span6">
-			<%= image_tag("Marathon_training_stairs01.jpg", :id=> "stairRunner") %>
-			<p id="homeCaption">Photo by Jeff Miller, 2001     © Board of Regents of the 
-				University of Wisconsin System
-			</p>
-		</div>
-		<div class="span6">
-			<h3 class="text-center">My Training Philosophy</h3>
+		
+		<div class="span4">
+			<p class="sectionHeadings">My Training Philosophy</p>
 		
 			<p>As your trainer, my goal is to assist you in accomplishing your goals as a long distance runner.  
 				I wish to provide you with the habits to 
@@ -33,10 +28,17 @@
 				you participating.
 			</p>
 		</div>
+		
+		<div class="span4">
+			<%= image_tag("Marathon_training_stairs01.jpg", :id=> "stairRunner") %>
+			<p id="homeCaption">Photo by Jeff Miller, 2001     © Board of Regents of the 
+				University of Wisconsin System
+			</p>
+		</div>
 
 	
-		<div class="span12">
-			<h3 class="text-center">Why You Should Choose Next Level Distance Running</h3>
+		<div class="span4">
+			<p class="sectionHeadings">Why You Should Choose Next Level Distance Running</p>
 			<p>Why might you need a trainer?</p>
 			<p>How can a trainer help you?</p>
 			<p>What a trainer can do for you</p>
@@ -65,6 +67,8 @@
 
 
 <div class="container-fluid">
+	<div class="row-fluid">
+		<div class="span8">
 	<h3>Packages Offered</h3>
 		<ul>
 			<li class="label label-success">Online Training Program</li>
@@ -91,6 +95,7 @@
 			</li>
        	</ul>
 		</ul>
+	</div>
 </div>
 
 
