removed picture from home page and mde the page 3 columns

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -30,14 +30,6 @@
 		</div>
 		
 		<div class="span4">
-			<%= image_tag("Marathon_training_stairs01.jpg", :id=> "stairRunner") %>
-			<p id="homeCaption">Photo by Jeff Miller, 2001     © Board of Regents of the 
-				University of Wisconsin System
-			</p>
-		</div>
-
-	
-		<div class="span4">
 			<p class="sectionHeadings">Why You Should Choose Next Level Distance Running</p>
 			<p>Why might you need a trainer?</p>
 			<p>How can a trainer help you?</p>
@@ -61,40 +53,36 @@
   	     	      	     	      doing what you are doing in your training</li>
 			</ul>
 		</div>
-	
-	</div>
-</div>
-
-
-<div class="container-fluid">
-	<div class="row-fluid">
-		<div class="span8">
-	<h3>Packages Offered</h3>
-		<ul>
-			<li class="label label-success">Online Training Program</li>
-		<ul>
-			<li>The Online Training Package is an excellent choice for runners seeking to reach 
-				the next level on their own.  This package offers great videos and power points 
-				that help you learn about preparing yourself for any event.  You will 
-				communicate with the trainer weekly to coordinate a plan and adjust it as 
-				needed.  <strong><%= link_to "  Click here",    training_programs_path %></strong>
-			       to get all of the details of this package and the pricing.
-			 </li>
+		
+		<div class="span4">
+			<p class="sectionHeadings">Packages Offered</p>
+			<ul>
+				<li class="label label-success">Online Training Program</li>
+			<ul>
+				<li>The Online Training Package is an excellent choice for runners seeking to reach 
+					the next level on their own.  This package offers great videos and power points 
+					that help you learn about preparing yourself for any event.  You will 
+					communicate with the trainer weekly to coordinate a plan and adjust it as 
+					needed.  <strong><%= link_to "  Click here",    training_programs_path %></strong>
+				       to get all of the details of this package and the pricing.
+				 </li>
 				  			  
-  		</ul>
-	       <br />
-    			<li class="label label-success">Face to Face Training Program</li>
-      		<ul>
-			<li>This is the best training package to optimize your effort with your trainer and to stay on
-				course with your training plan.  In addition to all of the benefits of the Online
-				Training Package, the Face to Face Training Package also includes one on one 
-				time with the trainer during your weekly meeting, and your weekly 
-				communication session online.
-				<strong><%= link_to "  Click here",    training_programs_path %></strong>
-		      	  	for more information regarding the Face to Face Training Package.
-			</li>
-       	</ul>
-		</ul>
+	  		</ul>
+		       <br />
+	    			<li class="label label-success">Face to Face Training Program</li>
+	      		<ul>
+				<li>This is the best training package to optimize your effort with your trainer and to stay on
+					course with your training plan.  In addition to all of the benefits of the Online
+					Training Package, the Face to Face Training Package also includes one on one 
+					time with the trainer during your weekly meeting, and your weekly 
+					communication session online.
+					<strong><%= link_to "  Click here",    training_programs_path %></strong>
+			      	  	for more information regarding the Face to Face Training Package.
+				</li>
+	       	</ul>
+			</ul>
+		</div>
+	
 	</div>
 </div>
 
