row column resizing

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -69,9 +69,9 @@ label {
 }
 
 .sectionHeadings {
-	font-size: 16pt;
+	font-size: 13pt;
 	font-weight: bold;
-	text-align: center;
+	//text-align: center;
 }
 //Header Style
 .navbar .nav > li > a {
