--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -8,7 +8,7 @@
 	<%= render 'layouts/addressDiv' %>
 	<div class="row-fluid">
 		<div class="span6">
-			<h3 class="text-center">About the Trainer</h3>
+			<p class="sectionHeadings">About the Trainer</p>
 
     		  	<p>Ronnie Carda has been devoted to helping others achieve their fitness goals for 
 				over 18 years.  He has enjoyed success working with individuals possessing a 
@@ -26,7 +26,7 @@
 
 	
 		<div class="span6">
-			<h3 class="text-center">Credentials and Accolades</h3>
+			<p class="sectionHeadings">Credentials and Accolades</p>
 			<ul>
 				<li>1990 - Ph D, Biodynamics, General</ br>
 					University of Wisconsin - Madison</ br>
