--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -56,32 +56,26 @@
 		
 		<div class="span4">
 			<p class="sectionHeadings">Packages Offered</p>
-			<ul>
-				<li class="label label-success">Online Training Program</li>
-			<ul>
-				<li>The Online Training Package is an excellent choice for runners seeking to reach 
-					the next level on their own.  This package offers great videos and power points 
-					that help you learn about preparing yourself for any event.  You will 
-					communicate with the trainer weekly to coordinate a plan and adjust it as 
-					needed.  <strong><%= link_to "  Click here",    training_programs_path %></strong>
-				       to get all of the details of this package and the pricing.
-				 </li>
-				  			  
-	  		</ul>
-		       <br />
-	    			<li class="label label-success">Face to Face Training Program</li>
-	      		<ul>
-				<li>This is the best training package to optimize your effort with your trainer and to stay on
-					course with your training plan.  In addition to all of the benefits of the Online
-					Training Package, the Face to Face Training Package also includes one on one 
-					time with the trainer during your weekly meeting, and your weekly 
-					communication session online.
-					<strong><%= link_to "  Click here",    training_programs_path %></strong>
-			      	  	for more information regarding the Face to Face Training Package.
-				</li>
-	       	</ul>
-			</ul>
-		</div>
+			
+			<p class="sectionHeadings">Online Training Program</p>
+			
+			<p>The Online Training Package is an excellent choice for runners seeking to reach 
+				the next level on their own.  This package offers great videos and power points 
+				that help you learn about preparing yourself for any event.  You will 
+				communicate with the trainer weekly to coordinate a plan and adjust it as 
+				needed.  <strong><%= link_to "  Click here",    training_programs_path %></strong>
+			       to get all of the details of this package and the pricing.
+			</p>
+				 
+	    		<p class="sectionHeadings">Face to Face Training Program</p>
+	      		
+			<p>This is the best training package to optimize your effort with your trainer and to stay on
+				course with your training plan.  In addition to all of the benefits of the Online
+				Training Package, the Face to Face Training Package also includes one on one 
+				time with the trainer during your weekly meeting, and your weekly 
+				communication session online.<strong><%= link_to "  Click here ",    training_programs_path %></strong>
+			      	for more information regarding the Face to Face Training Package.</p>
+		 </div>
 	
 	</div>
 </div>
