--- a/app/views/static_pages/training_programs.html.erb
+++ b/app/views/static_pages/training_programs.html.erb
@@ -8,7 +8,7 @@
 	<%= render 'layouts/addressDiv' %>
 	<div class="row-fluid">
 		<div class="span4">
-			<h3 class="text-center">Online Training Program</h3>
+			<p class="sectionHeadings">Online Training Program</p>
 
 			<p>The Online Training Package is an excellent choice for runners seeking to reach 
 				the next level on their own.  This package offers great videos and power points 
@@ -33,7 +33,7 @@
 
 	
 		<div class="span4">
-			<h3 class="text-center">Face to Face Training Program</h3>
+			<p class="sectionHeadings">Face to Face Training Program</p>
 			
 			<p>This is the best training package to optimize your effort with your trainer and to stay on
 				course with your training plan.  In addition to all of the benefits of the online
@@ -51,7 +51,7 @@
 		
 		<div class="span4">
 	
-			<h3>Workout Types</h3>
+			<p class="sectionHeadings">Workout Types</p>
 			<p>Group workouts will be individualized according to pace and volume and will include:
 				<ul>
 					<li>Group distance runs</li>
